@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>32.9.8</version>
+			<version>32.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
