@@ -1,4 +1,5 @@
 - Refactor: Mark TreasuryExemption::valueToExempt as deprecated and replace with TreasuryExemption.netAmountToExempt
+- Refactor: Mark DebitEntry::exemptedAmount as deprecated and replace with DebitEntry::netExemptedAmount
 
 8.2.4 (19-02-2022)
 - Improvement: Export documentObservations and documentTermsAndConditions in report
